nova (2012.1~e1~20110909.1546-0ubuntu0) UNRELEASED; urgency=low

  * Added python-feedparser to build-deps.
  * Added python-tempo to build-deps.

 -- Monty Taylor <mordred@inaugust.com>  Sat, 10 Sep 2011 07:55:54 -0700

nova (2011.3~rc~20110901.1523-0ubuntu1) oneiric; urgency=low

  [ Chuck Short ]
  * Really remove python-ipy.
  * New upstream release.
  * Use "--use_deprecated_auth" by default because we dont support
    kestone yet. (LP: #838768)

  [ James E. Blair ]
  * Add python-unittest2 as a build dep.

  [ Dave Walker (Daviey) ]
  * debian/control: Added python-kombu as a build and run depends.
    - LP: #798876

  [ Scott Moser ]
  * add dependency on qemu-kvm to nova-compute (LP: #833530)

 -- Chuck Short <zulcss@ubuntu.com>  Fri, 02 Sep 2011 13:21:22 -0400

nova (2011.3~d4-0ubuntu1) oneiric; urgency=low

  [Chuck Short]
  * New upstream release.

  [Thierry Carrez]
  * No longer run nova-objectstore as root (LP: #820968)

 -- Chuck Short <zulcss@ubuntu.com>  Fri, 26 Aug 2011 13:31:14 -0400

nova (2011.3~d4~20110812.1417-0ubuntu1) oneiric; urgency=low

  [Chuck Short]
  * New upstream version
  * Dont respawn the upstart jobs if nova is failing.
  * Remove python-ipy.

  [ Dan Prince ]
  * Updated the ajaxterm patch to work with latest nova code (privsep)
  * Added python-lxml to python-nova build-deps.

  [ Thomas Goirand ]
  * Add copyright info for ipv6 class for boto.

  [ Soren Hansen ]
  * Add parted to sudoers file.
  * Add Depends: python-simplejson and Conflicts: python-cjson due to
    bug #800465 which caused the test suite to fail.
  * Remove nova-instancemonitor package (dropped upstream).
  * Remove twisted dependency (dropped upstream).
  * Create nova-compute-{kvm,lxc,uml,xen} packages that pull in the
    right packages and configures nova to use the hypervisor in
    question.

  [ Thierry Carrez (ttx) ]
  * Added python-xattr to build deps, apprently this is now needed